# lz4-safe-rs

./: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decompress.rs  fuzz_round_trip.rs
src/: copy.rs  cursor.rs  decompress.rs  error.rs  lib.rs
tests/: test_decompress.rs
